--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,272 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+.container {
+	width: 870px;
+	margin: 0 auto;
+}
+
+.nav {
+	background-color: #222937;
+}
+.flex-nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.menu {
+	display: flex;
+	justify-content: center;
+}
+.menu-item {
+	font-size: 1.2rem;
+	padding: 1.5rem;
+}
+.menu-item a {
+	color: #fff;
+	text-decoration: none;
+	transition: 0.3s all ease;
+}
+.menu-item a:hover {
+	color: #ddd;
+}
+
+.intro {
+	display: flex;
+	justify-content: space-between;
+}
+.intro h1 {
+	font-size: 4rem;
+	width: 20%;
+	text-align: center;
+	align-self: center;
+	margin-left: 2rem;
+}
+.get-started {
+	align-self: flex-end;
+	margin-right: 12rem;
+}
+.code-image {
+	margin-top: 4rem;
+}
+.border {
+	border: 0.4px solid;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+}
+.flex-top {
+	display: flex;
+	margin-bottom: 2rem;
+}
+
+.flex-bottom {
+	display: flex;
+	margin-top: 1.5rem;
+}
+footer {
+	display: flex;
+	flex-direction: column;
+	line-height: 2rem;
+}
+address h5 {
+	font-size: 2rem;
+	text-decoration: underline;
+}
+.copyright {
+	text-align: center;
+	font-weight: bold;
+}
+
+/***************** MEDIA QUERY MAX-WIDTH: 500PX ****************/
+
+@media screen and (max-width: 500px) {
+
+	.nav {
+		width: 100%;
+		text-align: center;
+		background: none;
+	}
+
+	.flex-nav {
+		display:flex;
+		flex-direction: column;
+		width: 100%;
+		margin: 10px;
+		
+	}
+
+	.menu {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+	}
+	
+	.menu-item  {
+		font-size: 1.8rem;
+		border-bottom: 2px solid gray;
+		width: 100%;
+	}
+
+	.menu-item a {
+		color: #000;
+	}
+
+	.logo-image {
+		order: -1;
+		padding: 1rem;	
+	}
+
+	.code-image {
+		display: none;
+	}
+
+	.intro {
+		display: flex;
+		justify-content: center;
+	}
+
+	.intro h1 {
+		margin-left: 5rem;
+		margin-bottom: 5rem;
+	}
+	
+	.flex-top {
+		display: flex;
+		flex-direction: column;
+		font-size: 1.8rem;
+	}
+
+	.feature {
+		margin-bottom: 1rem;
+	}
+
+	.about {
+		margin-top: 1rem;
+	}
+
+	.flex-bottom {
+		display: flex;
+		flex-direction: column;
+		font-size: 1.8rem;
+	}
+
+	.product {
+		margin-top: 1.5rem;
+	}
+
+	.vision {
+		margin-top: 1.5rem;
+	}
+}
+
+/***************** MEDIA QUERY MAX-WIDTH: 800PX ****************/
+ 
+@media screen and (max-width: 800px) {
+	.nav {
+		background: none;
+		width: 100%;
+		margin-top: 4rem;
+	}
+	.logo-image {
+		position: absolute;
+		left: 21rem;
+		top: 2rem;
+	}
+	.menu {
+		display: flex;
+		width: 100%;
+	}
+
+	.menu-item a {
+		color: #000;
+	}
+	.intro {
+		display: flex;
+		justify-content: center;
+		margin-left: 7rem;
+		margin-top: 3rem;
+	}
+	.intro h1 {
+		margin-bottom: 2rem;
+	}
+	.get-started {
+		margin-left: -8rem;
+		width: 20%;
+		padding: 0.2rem 1rem;
+		background: transparent;
+	}
+	.code-image {
+		display: none;
+	}
+}
+ 
+
+
+	
